# terraforming-mars-mcp

./: .gitmodules  .mcp.json  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
.codex/: config.toml
agent-prompts/NEED_EXPLICIT_AUTH/: AGENTS.md
agent-prompts/agent_game_notes/2026_02_14/: card-strength-analysis.md  postgame-notes.md  strategy-report-200-lines.md
agent-prompts/claude/: AGENTS.md  GUIDE.md  strategy-notes.md  tharsis-board-shape.md
agent-prompts/codex_from_gameplay/: AGENTS.md  GUIDE.md  LEARNING_SYSTEM.md  NEXT_GAME_PROTOCOL.md  decision-taxonomy.md  game-learning-dataset.jsonl  game-learning-rollup.md  game-summary-template.json  postmortem-template.md  strategy_guide_2026_02_15_01.md  strategy_guide_prompt.md
agent-prompts/gemini/: GUIDE.md  tharsis-board-shape.md
agent-prompts/no_guide/: GUIDE.md  tharsis-board-shape.md
scripts/: tm_learning.py
terraforming-mars-mcp/: server.py
terraforming_mars_mcp/: CLAUDE.md  REPO_GUIDE.md  __init__.py  _app.py  _enums.py  _models.py  _payment.py  _tools_extra.py  api_response_models.py  card_info.py  game_state.py  observed_cards.py  server.py  turn_flow.py  waiting_for.py
terraforming_mars_mcp/bug_history/: bugs_2026_02_11.md
tests/: conftest.py  test_action_tool_mapping.py  test_board_state_names.py  test_card_info_played_cards.py  test_format_vp.py  test_game_state_summaries.py  test_observed_cards.py  test_or_response_tools.py  test_thin_raw_model.py  test_turn_flow_logs.py  test_turn_flow_wait_progress.py  test_waiting_for_normalization.py
(+40 files in other folders)
